import * as React from 'react';

import { act, fireEvent } from '@testing-library/react-native';

import { render } from '../../../test-utils';
import Checkbox from '../../Checkbox';

it('renders unchecked', () => {
  const tree = render(
    <Checkbox.Item status="unchecked" label="Unchecked Button" />
  ).toJSON();

  expect(tree).toMatchSnapshot();
});

it('can render leading checkbox control', () => {
  const tree = render(
    <Checkbox.Item
      label="Default with leading control"
      status={'unchecked'}
      position="leading"
    />
  ).toJSON();
  expect(tree).toMatchSnapshot();
});

it('should have `accessibilityState={ checked: true }` when `status="checked"`', () => {
  const { getAllByA11yState } = render(
    <Checkbox.Item status="checked" label="Checked Button" />
  );

  expect(getAllByA11yState({ checked: true })).toHaveLength(1);
});

it('should have `accessibilityState={ checked: false }` when `status="unchecked"', () => {
  const { getAllByA11yState } = render(
    <Checkbox.Item status="unchecked" label="Unchecked Button" />
  );

  expect(getAllByA11yState({ checked: false })).toHaveLength(1);
});

it('should have `accessibilityState={ checked: "mixed" }` when `status="indeterminate"`', () => {
  const { getAllByA11yState } = render(
    <Checkbox.Item status="indeterminate" label="Indeterminate Button" />
  );

  expect(getAllByA11yState({ checked: 'mixed' })).toHaveLength(1);
});

it('disables the row when the prop disabled is true', () => {
  const { getByLabelText } = render(
    <Checkbox.Item
      status="unchecked"
      label=""
      accessibilityLabel="some checkbox"
      disabled
    />
  );

  const touchable = getByLabelText('some checkbox');

  expect(touchable.props).toMatchObject({
    accessibilityState: { disabled: true },
  });
});

it('should have maxFontSizeMultiplier set to 1.5 by default', () => {
  const { getByTestId } = render(
    <Checkbox.Item label="" testID="checkbox-item" status="unchecked" />
  );
  const checkboxItemText = getByTestId('checkbox-item-text');
  expect(checkboxItemText.props.maxFontSizeMultiplier).toBe(1.5);
});

it('should execute onLongPress', () => {
  const onLongPress = jest.fn();

  const { getByTestId } = render(
    <Checkbox.Item
      label="Item"
      status="unchecked"
      testID="checkbox-item"
      onLongPress={onLongPress}
    />
  );

  act(() => {
    fireEvent(getByTestId('checkbox-item'), 'longPress', { key: 'value' });
  });

  expect(onLongPress).toHaveBeenCalledTimes(1);
});
