// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can render leading checkbox control 1`] = `
<View
  accessibilityLabel="Default with leading control"
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": false,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      false,
      undefined,
    ]
  }
>
  <View
    importantForAccessibility="no-hide-descendants"
    pointerEvents="none"
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      centered={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "alignItems": "center",
              "borderRadius": 20,
              "height": 40,
              "justifyContent": "center",
              "width": 40,
            },
            undefined,
            undefined,
          ],
        ]
      }
    >
      <View
        pointerEvents="none"
        style={
          {
            "alignItems": "center",
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 2,
                "height": 18,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 18,
              },
              {
                "opacity": 1,
              },
            ]
          }
        >
          <View
            pointerEvents="none"
            style={
              [
                {
                  "borderRadius": 2,
                  "borderWidth": 2,
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                {
                  "borderColor": "rgba(73, 69, 79, 1)",
                },
                {
                  "opacity": 1,
                },
              ]
            }
          />
          <View
            pointerEvents="none"
            style={
              [
                {
                  "borderRadius": 2,
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                {
                  "backgroundColor": "rgba(103, 80, 164, 1)",
                },
                {
                  "opacity": 0,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "height": 18,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "top": 0,
                },
                {
                  "opacity": 0,
                  "width": 0,
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 18,
                  "justifyContent": "center",
                  "width": 18,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderBottomWidth": 2,
                      "borderLeftWidth": 2,
                      "height": 6,
                      "transform": [
                        {
                          "rotate": "-45deg",
                        },
                        {
                          "translateY": -1,
                        },
                        {
                          "translateX": 1,
                        },
                      ],
                      "width": 11,
                    },
                    {
                      "borderColor": "transparent",
                    },
                    null,
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <Text
      maxFontSizeMultiplier={1.5}
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(29, 27, 32, 1)",
            "writingDirection": "ltr",
          },
          [
            {
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0.5,
              "lineHeight": 24,
            },
            [
              {
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "opacity": 1,
                "textAlign": "right",
              },
              undefined,
            ],
          ],
        ]
      }
      testID="undefined-text"
    >
      Default with leading control
    </Text>
  </View>
</View>
`;

exports[`renders unchecked 1`] = `
<View
  accessibilityLabel="Unchecked Button"
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": false,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      false,
      undefined,
    ]
  }
>
  <View
    importantForAccessibility="no-hide-descendants"
    pointerEvents="none"
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        undefined,
      ]
    }
  >
    <Text
      maxFontSizeMultiplier={1.5}
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(29, 27, 32, 1)",
            "writingDirection": "ltr",
          },
          [
            {
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0.5,
              "lineHeight": 24,
            },
            [
              {
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "opacity": 1,
                "textAlign": "left",
              },
              undefined,
            ],
          ],
        ]
      }
      testID="undefined-text"
    >
      Unchecked Button
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      centered={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "alignItems": "center",
              "borderRadius": 20,
              "height": 40,
              "justifyContent": "center",
              "width": 40,
            },
            undefined,
            undefined,
          ],
        ]
      }
    >
      <View
        pointerEvents="none"
        style={
          {
            "alignItems": "center",
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 2,
                "height": 18,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 18,
              },
              {
                "opacity": 1,
              },
            ]
          }
        >
          <View
            pointerEvents="none"
            style={
              [
                {
                  "borderRadius": 2,
                  "borderWidth": 2,
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                {
                  "borderColor": "rgba(73, 69, 79, 1)",
                },
                {
                  "opacity": 1,
                },
              ]
            }
          />
          <View
            pointerEvents="none"
            style={
              [
                {
                  "borderRadius": 2,
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                {
                  "backgroundColor": "rgba(103, 80, 164, 1)",
                },
                {
                  "opacity": 0,
                },
              ]
            }
          />
          <View
            style={
              [
                {
                  "height": 18,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "top": 0,
                },
                {
                  "opacity": 0,
                  "width": 0,
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 18,
                  "justifyContent": "center",
                  "width": 18,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderBottomWidth": 2,
                      "borderLeftWidth": 2,
                      "height": 6,
                      "transform": [
                        {
                          "rotate": "-45deg",
                        },
                        {
                          "translateY": -1,
                        },
                        {
                          "translateX": 1,
                        },
                      ],
                      "width": 11,
                    },
                    {
                      "borderColor": "transparent",
                    },
                    null,
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
